# C-compiler

1/: Makefile  c.tab.hpp  cc.cpp
1/lex_only/: Makefile  lex.yy.c  sample1.lex
1/report/: cover.tex  main.tex  metadata.tex  start.tex
2/: c.output  c.tab.cpp  c.tab.hpp
2/examples/: hello_world_invalid.c
2/test/: Makefile  test.gv  test.output  test.tab.c  test.y
3/: Makefile  README.md  ast.cpp  ast.hpp  ast1.hpp  c.y  cc  cc.cpp  magic_enum.hpp  output.puml
4/: .gitignore  CMakeLists.txt  Makefile  README.md  ast.cpp  ast.hpp  c.l  c.tab.cpp  c.tab.hpp  c.y  cc.cpp  delete_extra.py  delete_tests.py  output  run_tests.py  semantic.cpp  semantic_analysis.cpp  semantic_analysis.hpp  test.cpp  test_results.txt
4/examples/: hello_world.c  test2.c  test_init.c
4/examples/negative/: init1.c  init2.c  init3.c  init4.c  type.c  var_rename.c
4/examples/negative/expr/: init.c
4/examples/positive/: .simplest_init.c.swp  duplicate_name.c  init.c  llvm.ll  llvm2.ll  optimization.c
4/examples/positive/declarations/: floats.c  globalVarDecl.c
4/examples/positive/declarations/expressions/: test_oprts.c
4/examples/positive/expr/: const_prop.c  const_prop.c.ll  floats.c  init.c  minus_minus.c  plus_plus.c  test_oprts.c
4/examples/positive/fnDef/: empty.c
4/examples/positive/stmts/: for.c  forStmt.c  gotoStmt.c  ifStmt.c  test_stmts.c  whileStmt.c
4/examples/tests/: 00025.c  00105.c  00132.c  00156.c  00168.c  00169.c
4/src/: SemanticException.h  utils.h
4/src/ast/: base.cpp  base.h  decl.cpp  decl.h  enums.cpp  enums.h  expr.cpp  expr.h  prog.cpp  prog.h  stmt.cpp  stmt.h
4/src/visitor/: Codegen.cpp  Codegen.h  algebra_simplification_opt.cpp  algebra_simplification_opt.h  codegen.cpp  codegen.h  const_prop_opt.cpp  const_prop_opt.h  dead_code_opt.cpp  dead_code_opt.h  decl_codegen.cpp  expr_codegen.cpp  opt_utils.h  printer.h  stmt_codegen.cpp  visitor.h
